checking for gradle version to allow build with gradle 7+

--- a/circle-menu/build.gradle
+++ b/circle-menu/build.gradle
@@ -1,6 +1,13 @@
 apply plugin: 'com.android.library'
 apply plugin: 'signing'
-apply plugin: 'com.bmuschko.nexus'
+
+// https://github.com/bmuschko/gradle-nexus-plugin
+// not compatible with gradle >= v7.0
+
+if ( ( getProject().getGradle().getGradleVersion() as float ) < 4.0f )
+{
+    apply plugin: 'com.bmuschko.nexus'
+}
 
 group = 'com.ramotion.circlemenu'
 version = '0.3.2'
@@ -26,6 +33,8 @@ android {
     }
 }
 
+println "Running gradle version: $gradle.gradleVersion"
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -36,45 +45,47 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
 
-modifyPom {
-    project {
-        name 'Circle Menu for Android'
-        description 'CircleMenu is a simple, elegant UI menu with a circular layout and material design animations. http://ramotion.com'
-        url 'https://github.com/Ramotion/circle-menu-android'
-        inceptionYear '2017'
-
-        scm {
+if ( ( getProject().getGradle().getGradleVersion() as float ) < 4.0f ) {
+    modifyPom {
+        project {
+            name 'Circle Menu for Android'
+            description 'CircleMenu is a simple, elegant UI menu with a circular layout and material design animations. http://ramotion.com'
             url 'https://github.com/Ramotion/circle-menu-android'
-            connection 'scm:git@github.com:Ramotion/circle-menu-android.git'
-            developerConnection 'scm:git@github.com:Ramotion/circle-menu-android.git'
-        }
+            inceptionYear '2017'
 
-        licenses {
-            license {
-                name 'The MIT License (MIT)'
-                url 'https://opensource.org/licenses/mit-license.php'
-                distribution 'repo'
-            }
-        }
-
-        developers {
-            developer {
-                id 'dvg4000'
-                name 'Dmitry Grishechkin'
-                email 'dvgrishechkin@yandex.ru'
+            scm {
+                url 'https://github.com/Ramotion/circle-menu-android'
+                connection 'scm:git@github.com:Ramotion/circle-menu-android.git'
+                developerConnection 'scm:git@github.com:Ramotion/circle-menu-android.git'
             }
 
-            developer {
-                id 'golovin47'
-                name 'Ivan Golovin'
-                email 'golovinivans@gmail.com'
+            licenses {
+                license {
+                    name 'The MIT License (MIT)'
+                    url 'https://opensource.org/licenses/mit-license.php'
+                    distribution 'repo'
+                }
+            }
+
+            developers {
+                developer {
+                    id 'dvg4000'
+                    name 'Dmitry Grishechkin'
+                    email 'dvgrishechkin@yandex.ru'
+                }
+
+                developer {
+                    id 'golovin47'
+                    name 'Ivan Golovin'
+                    email 'golovinivans@gmail.com'
+                }
             }
         }
     }
-}
 
-nexus {
-    sign = true
-    repositoryUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
-    snapshotRepositoryUrl = 'https://oss.sonatype.org/content/repositories/snapshots/'
+    nexus {
+        sign = true
+        repositoryUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
+        snapshotRepositoryUrl = 'https://oss.sonatype.org/content/repositories/snapshots/'
+    }
 }
