AGP upgrade (moving namespace)

--- a/circle-menu/build.gradle
+++ b/circle-menu/build.gradle
@@ -14,13 +14,10 @@ version = '0.3.2'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion '28.0.3'
 
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 6
-        versionName version
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -31,6 +28,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.ramotion.circlemenu'
 }
 
 dependencies {
